[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/laser.gd" type="Script" id=1]
[ext_resource path="res://art/bullets/lasers/blue/_1.png" type="Texture" id=2]
[ext_resource path="res://art/bullets/lasers/blue/_4.png" type="Texture" id=5]
[ext_resource path="res://art/bullets/lasers/blue/_6.png" type="Texture" id=6]
[ext_resource path="res://art/bullets/lasers/blue/_5.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "end",
"speed": 30.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "start",
"speed": 30.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "sizzle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.547, 50.3995 )

[node name="laser" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "sizzle"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_laser_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_laser_body_exited"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
